--- a/angular.json
+++ b/angular.json
@@ -29,20 +29,26 @@
             "styles": [
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [],
+            "allowedCommonJsDependencies": [
+              "@messageformat/core",
+              "dayjs",
+              "ws"
+            ]
           },
+          
           "configurations": {
             "production": {
               "budgets": [
                 {
                   "type": "initial",
-                  "maximumWarning": "500kB",
-                  "maximumError": "1MB"
+                  "maximumWarning": "750kb",
+                  "maximumError": "1mb"
                 },
                 {
                   "type": "anyComponentStyle",
-                  "maximumWarning": "4kB",
-                  "maximumError": "8kB"
+                  "maximumWarning": "500kB",
+                  "maximumError": "1mb"
                 }
               ],
               "outputHashing": "all"
@@ -97,6 +103,7 @@
           }
         }
       }
+    
     }
   }
 }
