--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,12 +17,13 @@
     "importHelpers": true,
     "strictPropertyInitialization": false,
     "target": "ES2022",
-    "module": "ES2022"
+    "module": "ES2022",
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
     "strictInjectionParameters": true,
     "strictInputAccessModifiers": true,
     "strictTemplates": true
-  }
+  },    
+
 }
