--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^19.2.0",
     "@angular/platform-browser-dynamic": "^19.2.0",
     "@angular/router": "^19.2.0",
+    "@messageformat/core": "^3.4.0",
     "@ngx-translate/core": "^16.0.4",
     "@ngx-translate/http-loader": "^16.0.1",
     "@supabase/gotrue-js": "^2.61.0",
@@ -25,12 +26,14 @@
     "@tailwindcss/postcss": "^4.0.9",
     "daisyui": "^5.0.0",
     "dayjs": "^1.11.13",
+    "dayjs-esm": "^0.0.1",
+    "isomorphic-ws": "^5.0.0",
     "ngx-translate-messageformat-compiler": "^7.1.0",
     "postcss": "^8.5.3",
     "rxjs": "~7.8.0",
     "tailwindcss": "^4.0.9",
     "tslib": "^2.3.0",
-    "zone.js": "~0.15.0"
+    "zone.js": "^0.15.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^19.2.0",
