--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,7 @@
     "strictPropertyInitialization": false,
     "target": "ES2022",
     "module": "ES2022",
+    "allowSyntheticDefaultImports": true
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
