--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "ngx-translate-messageformat-compiler": "^7.1.0",
     "postcss": "^8.5.3",
     "rxjs": "~7.8.0",
+    "swiper": "^11.2.5",
     "tailwindcss": "^4.0.9",
     "tslib": "^2.3.0",
     "zone.js": "^0.15.0"
