--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "^19.2.0",
     "@angular/platform-browser-dynamic": "^19.2.0",
     "@angular/router": "^19.2.0",
+    "@lordicon/element": "^1.10.1",
     "@messageformat/core": "^3.4.0",
     "@ngx-translate/core": "^16.0.4",
     "@ngx-translate/http-loader": "^16.0.1",
@@ -29,6 +30,7 @@
     "dayjs": "^1.11.13",
     "dayjs-esm": "^0.0.1",
     "isomorphic-ws": "^5.0.0",
+    "lottie-web": "^5.12.2",
     "ngx-translate-messageformat-compiler": "^7.1.0",
     "postcss": "^8.5.3",
     "rxjs": "~7.8.0",
