--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "dayjs": "^1.11.13",
     "dayjs-esm": "^0.0.1",
     "gsap": "^3.12.7",
+    "interactjs": "^1.10.27",
     "isomorphic-ws": "^5.0.0",
     "lottie-web": "^5.12.2",
     "ngx-translate-messageformat-compiler": "^7.1.0",
