--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "@angular/router": "^19.2.0",
     "@lordicon/element": "^1.10.1",
     "@messageformat/core": "^3.4.0",
+    "@ngrx/effects": "^19.1.0",
+    "@ngrx/store": "^19.1.0",
+    "@ngrx/store-devtools": "^19.1.0",
     "@ngx-translate/core": "^16.0.4",
     "@ngx-translate/http-loader": "^16.0.1",
     "@supabase/gotrue-js": "^2.61.0",
@@ -30,9 +33,9 @@
     "dayjs": "^1.11.13",
     "dayjs-esm": "^0.0.1",
     "gsap": "^3.12.7",
-    "interactjs": "^1.10.27",
     "isomorphic-ws": "^5.0.0",
     "lottie-web": "^5.12.2",
+    "ngrx-store-localstorage": "^19.0.0",
     "ngx-translate-messageformat-compiler": "^7.1.0",
     "postcss": "^8.5.3",
     "rxjs": "~7.8.0",
